namespace RpgLibrary.Contracts;

public interface IShopItem
{
    string Name { get; }

    int Price { get; }
}
